--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <link rel='preconnect' href='https://fonts.googleapis.com' crossorigin>
   <link rel='preconnect' href='https://maxst.icons8.com' crossorigin>
   <link rel="preload" as='style' href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
-  <link rel="preload" as='style' href="https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@100;300;400;700;900&display=swap">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@100;300;400;700;900&display=swap">
+  <!-- <link rel="preload" as='style' href="https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@100;300;400;700;900&display=swap"> -->
+  <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@100;300;400;700;900&display=swap"> -->
   <link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
   <title>Vue-Animations</title>
 </head>
